[package]
name = "step-broadcastooor"
version = "0.2.0"
authors = ["Dana <dana@step.finance>"]
repository = "https://github.com/step-finance/step-broadcastooor"
homepage = "https://step.finance/"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.10.1"
futures-util = "0.3.19"
anyhow = "1.0.79"
serde_json = "1.0.108"
serde = "1.0.193"
axum = "0.7.4"
http = "1.1.0"
dashmap = "5.5.3"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
serde_derive = "1.0.204"
chrono = "0.4.38"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
evalexpr = { version = "11.3.0", features = [] }
tower-http = { version = "0.5.2", features = ["cors"] }
socketioxide = { version = "0.14.0", features = [
    "extensions",
    "state",
] }
clap = { version = "3.2.23", features = ["derive", "env"] }
tokio = { version = "1.35.1", features = [
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
ts-rs = { version = "8.1", features = ["chrono-impl"] }
metrics_cloudwatch = "2.0.1"
solana-zk-token-sdk = "=1.18.20"

step-common-rust = { git = "ssh://git@github.com/step-finance/step-common-rust", tag = "0.1.2", version = "0.1.2" }
step-ingestooor-engine = { git = "ssh://git@github.com/step-finance/step-ingestooor.git", rev = "4d41bb962cbc40155092b67f53557020e55da62b" }
step-ingestooor-sdk = { git = "ssh://git@github.com/step-finance/step-ingestooor.git", rev = "4d41bb962cbc40155092b67f53557020e55da62b" }

# step-common-rust = { path = "../step-common-rust" }
# step-ingestooor-engine = { path = "../step-ingestooor/crates/engine" }
# step-ingestooor-sdk = { path = "../step-ingestooor/crates/sdk" }

indexer_rabbitmq = { package = "holaplex-indexer-rabbitmq", git = "https://github.com/step-finance/indexer-geyser-plugin", rev = "28ea54d9b00f28230fe1e04c5a5c782d42355613" }

[patch.crates-io]
solana-cost-model = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-merkle-tree = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-ledger = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-storage-bigtable = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-storage-proto = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-runtime = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-accounts-db = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-client = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-transaction-status = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-sdk = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-logger = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-program = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-metrics = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }
solana-account-decoder = { git = 'https://github.com/step-finance/solana.git', rev = "04b3633afd99c5d02f0d2e844d29ad766d6f1ba8" }