[package]
name = "step-broadcastooor"
version = "0.2.1"
authors = ["Dana <dana@step.finance>"]
repository = "https://github.com/step-finance/step-broadcastooor"
homepage = "https://step.finance/"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.10.1"
futures-util = "0.3.19"
anyhow = "1.0.79"
serde_json = "1.0.108"
serde = "1.0.193"
axum = "0.7.4"
http = "1.1.0"
dashmap = "5.5.3"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
serde_derive = "1.0.204"
chrono = "0.4.38"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
evalexpr = { version = "11.3.0", features = [] }
tower-http = { version = "0.5.2", features = ["cors"] }
socketioxide = { version = "0.14.0", features = ["extensions", "state"] }
clap = { version = "3.2.23", features = ["derive", "env"] }
tokio = { version = "1.35.1", features = [
    "time",
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
ts-rs = { version = "8.1", features = ["chrono-impl"] }
metrics_cloudwatch = "2.0.1"
solana-zk-token-sdk = "=1.18.22"
solana-client = "=1.18.22"
solana-sdk = "=1.18.22"
solana-program = "=1.18.22"
solana-transaction-status = "=1.18.22"
solana-account-decoder = "=1.18.22"
solana-ledger = "=1.18.22"

step-common-rust = { git = "ssh://git@github.com/step-finance/step-ingestooor", rev = "1d2585c9a6b9494b536e088eb4dd35587515a737" }
step-ingestooor-engine = { git = "ssh://git@github.com/step-finance/step-ingestooor.git", rev = "1d2585c9a6b9494b536e088eb4dd35587515a737" }
step-ingestooor-sdk = { git = "ssh://git@github.com/step-finance/step-ingestooor", rev = "1d2585c9a6b9494b536e088eb4dd35587515a737" }

# step-common-rust = { path = "../step-common-rust/crates/step-common-rust", version = "0.3.0" }
# step-ingestooor-engine = { path = "../step-ingestooor/crates/engine" }
# step-ingestooor-sdk = { path = "../step-common-rust/crates/ingestooor-sdk", version = "0.3.0" }

indexer_rabbitmq = { package = "holaplex-indexer-rabbitmq", git = "https://github.com/step-finance/indexer-geyser-plugin", rev = "d04f8fdd9eefd02692fd15dc5c6553d81e53907c", features = [
    "geyser",
] }

[patch.crates-io]
solana-cost-model = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-merkle-tree = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-ledger = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-storage-bigtable = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-storage-proto = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-runtime = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-accounts-db = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-client = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-transaction-status = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-sdk = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-logger = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-program = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-metrics = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-account-decoder = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
solana-zk-token-sdk = { git = 'https://github.com/step-finance/agave', rev = "514cbb6e001d31cdd4933e5d672457c95fbc1b27" }
